// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout === horizontal should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 100px; height: 100%;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === horizontal should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 500px; height: 100%;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 200px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 300px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 400px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === horizontal should render component 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 300px; height: 100%;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 200px;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === horizontal should render fragments 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 200px; height: 100%;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === horizontal should render many children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 40300px; height: 100%;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 200px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 300px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 400px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === horizontal should render non elements 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 200px; height: 100%;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        string
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === horizontal should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="width: 100px; height: 800px; overflow: auto;"
  >
    <div
      style="position: relative; width: 500px; height: 100%;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 200px;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 300px;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 400px;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === vertical should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 100%; height: 50px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === vertical should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 100%; height: 230px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === vertical should render component 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 100%; height: 150px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 0px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 50px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 100px;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === vertical should render fragments 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 100%; height: 100px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 0px;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 50px;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === vertical should render many children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 100%; height: 40030px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === vertical should render non elements 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow: auto;"
  >
    <div
      style="position: relative; width: 100%; height: 100px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 0px;"
      >
        string
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 50px;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`layout === vertical should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="width: 100px; height: 800px; overflow: auto;"
  >
    <div
      style="position: relative; width: 100%; height: 230px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; top: 100px;"
      >
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
